--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@popperjs/core": "^2.9.1",
+    "bootstrap": "^5.0.0-beta2",
     "next": "10.0.9",
+    "nextjs-fonts": "^0.22.0",
+    "node-sass": "^5.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
