--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@popperjs/core": "^2.9.1",
     "bootstrap": "^5.0.0-beta2",
+    "contentful": "^8.2.0",
     "next": "10.0.9",
     "nextjs-fonts": "^0.22.0",
     "node-sass": "^5.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-to-print": "^2.12.3"
   }
 }
