--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run test",
+      "pre-commit": "npm run lint",
       "pre-push": "npm run build"
     }
   }
