--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint:css": "stylelint **/*.scss --syntax scss || true",
     "lint:css:fix": "stylelint src/**/*.scss --fix",
     "lint:js": "eslint src/",
-    "lint:js:fix": "eslint src/ --fix"
+    "lint:js:fix": "eslint src/ --fix",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^14.1.2",
+    "@contentful/rich-text-types": "^14.1.2",
     "@popperjs/core": "^2.9.1",
     "bootstrap": "^5.0.0-beta2",
     "contentful": "^8.2.0",
@@ -45,11 +48,5 @@
   },
   "eslintConfig": {
     "extends": "react-app"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint",
-      "pre-push": "npm run build"
-    }
   }
 }
