--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@popperjs/core": "^2.9.1",
     "bootstrap": "^5.0.0-beta2",
     "contentful": "^8.2.0",
+    "interweave": "^12.7.1",
     "next": "10.0.9",
     "nextjs-fonts": "^0.22.0",
     "node-sass": "^5.0.0",
