--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "bootstrap": "^5.0.0-beta2",
     "contentful": "^8.2.0",
     "interweave": "^12.7.1",
-    "next": "10.0.9",
+    "next": "^12.3.4",
     "nextjs-fonts": "^0.22.0",
-    "node-sass": "^5.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "node-sass": "^6.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-to-print": "^2.12.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/plugin-transform-runtime": "^7.13.10",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.12.13",
+    "@babel/core": "^7.22.9",
+    "@babel/plugin-transform-runtime": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
     "babel-jest": "^26.6.3",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "eslint": "^7.22.0",
@@ -42,6 +42,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.2.0",
     "npm-run-all": "^4.1.5",
+    "sass": "^1.64.1",
     "stylelint": "^13.12.0",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-config-standard": "^21.0.0",
